Implement data verification before disconnecting wifi. Implement Blynk.virtualSync() methods instead of Blynk.syncAll(). Minor bugfixes. Update readme

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+
 [env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
@@ -15,3 +16,6 @@ framework = arduino
 ;build_flags = -v
 lib_deps =
   Blynk
+monitor_port = COM3
+monitor_speed = 115200
+monitor_dtr = 0
