--- a/platformio.ini
+++ b/platformio.ini
@@ -20,12 +20,12 @@ monitor_port = COM3
 monitor_speed = 115200
 monitor_dtr = 0
 
-;some serial debugging options
-build_flags =
-  -DDEBUG_ESP_PORT=Serial
-  -DDEBUG_ESP_CORE
-  -DDEBUG_ESP_WIFI
-  -DDEBUG_ESP_HTTP_UPDATE
-  -DDEBUG_ESP_UPDATER
-  -DDEBUG_ESP_OTA
-  -DDEBUG_ESP_OOM
+;ESP SDK serial debugging options
+;build_flags =
+;  -DDEBUG_ESP_PORT=Serial
+;  -DDEBUG_ESP_CORE
+;  -DDEBUG_ESP_WIFI
+;  -DDEBUG_ESP_HTTP_UPDATE
+;  -DDEBUG_ESP_UPDATER
+;  -DDEBUG_ESP_OTA
+;  -DDEBUG_ESP_OOM
