Remove uneeded state 2, fix comments, cleanup ini, move #define privacy to privacy.h

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,12 +13,12 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-;build_flags = -v
 lib_deps =
   Blynk
-monitor_port = COM3
-monitor_speed = 115200
-monitor_dtr = 0
+
+;monitor_port = COM3
+;monitor_speed = 115200
+;monitor_dtr = 0
 
 ;ESP SDK serial debugging options
 ;build_flags =
@@ -29,3 +29,5 @@ monitor_dtr = 0
 ;  -DDEBUG_ESP_UPDATER
 ;  -DDEBUG_ESP_OTA
 ;  -DDEBUG_ESP_OOM
+
+;build_flags = -v
